working game no css

--- a/index.html
+++ b/index.html
@@ -14,23 +14,16 @@
 	<h1>Press Any Key to Start Playing!</h1>
 
 
-	<h2>Wins</h2>
-	
-	<h2 id="winsTotal"></h2>
-
+	<h2>Wins: <span id="winsTotal"></span></h2>
 
 
 	<h2>Current Word</h2>
 
 	<h2 id="guessedRight"></h2>
 
-	<h2 id="underlines"></h2>
 
 
-
-	<h2>Number of guesses remaining</h2>
-
-	<h2 id="guessesLeft"></h2>
+	<h2>Number of guesses remaining: <span id="guessesLeft"></span></h2>
 
 
 
