--- a/index.html
+++ b/index.html
@@ -6,33 +6,40 @@
 
 	<link href="assets/css/reset.css" rel="stylesheet" type="text/css" />
 	<link href="assets/css/style.css" rel="stylesheet" type="text/css" />
+	<link href="https://fonts.googleapis.com/css?family=Coming+Soon" rel="stylesheet">
 	<script src="assets/javascript/game.js"></script>
 
 </head>
+
 <body>
+<div id="wrapGame">
 
-	<h1>Press Any Key to Start Playing!</h1>
-
-
-	<h2>Wins: <span id="winsTotal"></span></h2>
-
-
-	<h2>Current Word</h2>
-
-	<h2 id="guessedRight"></h2>
-
-
-
-	<h2>Number of guesses remaining: <span id="guessesLeft"></span></h2>
-
-
-
-	<h2>Letters already guessed</h2>
-
-	<h2 id="guessedWrong"></h2>
+	<header>
+		<h1>"Guess What I Drawed"</h1>
+		<h2>Press Any Key to Start Playing!</h2>
+	</header>
 	
 
+	<section>
+		<h2>Wins: <span id="winsTotal"></span></h2>
 
+		<h2>Current Word</h2>
+
+		<h2 id="guessedRight"></h2>
+
+		<h2>Number of guesses remaining: <span id="guessesLeft"></span></h2>
+
+		<h2>Letters already guessed</h2>
+
+		<h2 id="guessedWrong"></h2>
+	
+	</section>
+
+	<aside>
+		<img id="artwork" src="assets/images/img_initial2.png" alt="artwork" />
+	</aside>
+
+</div>
 
 
 
